--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/flag-overview/flag-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/flag-overview/flag-overview.component.html
@@ -1,5 +1,5 @@
 <form class="flag-overview" [formGroup]="overviewForm">
-  <mat-form-field class="ft-14-600 name">
+  <mat-form-field class="dense-2 ft-14-600 name">
     <input
       matInput
       class="ft-14-400"
@@ -9,7 +9,7 @@
     />
   </mat-form-field>
 
-  <mat-form-field class="ft-14-600 key">
+  <mat-form-field class="dense-2 ft-14-600 key">
     <input
       matInput
       class="ft-14-400"
@@ -21,7 +21,7 @@
     {{ keyError }}
   </mat-error>
 
-  <mat-form-field class="ft-14-600 variationType">
+  <mat-form-field class="dense-2 ft-14-600 variationType">
     <mat-label>{{ 'feature-flags.overview.flag-variation-type.text' | translate }}</mat-label>
     <mat-select class="ft-14-400" formControlName="variationType">
       <mat-option *ngFor="let type of variationTypes" [value]="type">
@@ -33,7 +33,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-form-field class="ft-14-600 description">
+  <mat-form-field class="dense-2 ft-14-600 description">
     <input
       class="ft-14-400"
       matInput
