--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -1,6 +1,6 @@
 <mat-card appearance="raised" class="metrics-container">
   <div class="header">
-    <mat-form-field>
+    <mat-form-field class="dense-2">
       <input
         class="ft-16-400 search-input"
         matInput
