--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .mat-optgroup.hideLabel .mat-optgroup-label {
+::ng-deep .mat-mdc-optgroup.hideLabel .mat-mdc-optgroup-label {
   display: none;
 }
 
@@ -81,14 +81,5 @@
     .btn-back {
       margin-left: 0 !important;
     }
-  }
-
-  ::ng-deep .form-control .mat-form-field-underline {
-    bottom: unset;
-    background-color: unset !important;
-  }
-
-  ::ng-deep .mat-form-field-appearance-legacy.mat-form-field-invalid:not(.mat-focused) .mat-form-field-ripple {
-    display: none;
   }
 }
