--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -1,14 +1,14 @@
 <mat-card appearance="raised" class="segments-list-container">
   <div class="header">
     <div>
-      <mat-form-field class="filter-options">
+      <mat-form-field class="dense-2 filter-options">
         <mat-select class="ft-16-600" [(ngModel)]="selectedExperimentFilterOption">
           <mat-option *ngFor="let filterOption of experimentFilterOptions" [value]="filterOption">
             {{ filterOption | titlecase }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field class="dense-2">
         <input
           class="search-input ft-16-400"
           matInput
