--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.scss
@@ -15,11 +15,6 @@
     .filter-options {
       margin-right: 10px;
       width: 80px;
-
-      ::ng-deep .mat-form-field-underline,
-      ::ng-deep .mat-form-field-ripple {
-        background-color: unset;
-      }
     }
 
     .search-input {
@@ -40,7 +35,7 @@
       margin-right: 20px;
     }
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   ::ng-deep .mat-form-field-suffix {
     top: 5px;
   }
@@ -119,7 +114,7 @@
       }
     }
 
-    .mat-form-field {
+    .mat-mdc-form-field {
       width: 40%;
     }
   }
