--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/experiment-users/experiment-users.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/experiment-users/experiment-users.component.html
@@ -1,7 +1,7 @@
 <div class="exclude-entities">
   <h3 class="ft-22-700">{{ 'users.excluded-entity.text' | translate }}</h3>
   <form class="exclude-form" [formGroup]="excludeEntitiesForm" *ngIf="(permissions$ | async)?.users.create">
-    <mat-form-field class="ft-14-400 form-control">
+    <mat-form-field class="dense-2 ft-14-400 form-control">
       <mat-select class="input" formControlName="entityType">
         <mat-option *ngFor="let entity of entityTypes" [value]="entity.value">
           {{ entity.value }}
@@ -9,7 +9,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="ft-14-600 form-control" *ngIf="entityTypeValue">
+    <mat-form-field class="dense-2 ft-14-600 form-control" *ngIf="entityTypeValue">
       <mat-select class="input" formControlName="groupType">
         <mat-option *ngFor="let groupType of groupTypes" [value]="groupType">
           {{ groupType }}
@@ -17,7 +17,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="ft-14-600 form-control input">
+    <mat-form-field class="dense-2 ft-14-600 form-control input">
       <input matInput [placeholder]="getIdPlaceholder" formControlName="id" />
     </mat-form-field>
 
