--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/feature-flags-list/feature-flags-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/feature-flags-list/feature-flags-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="flags-list-container">
   <div class="header">
     <div>
-      <mat-form-field class="filter-options">
+      <mat-form-field class="dense-2 filter-options">
         <mat-select
           class="ft-16-600"
           [(ngModel)]="selectedFlagFilterOption"
@@ -12,7 +12,7 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field class="dense-2">
         <input
           class="search-input ft-16-400"
           matInput
