--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
@@ -17,11 +17,6 @@ $experiment-state-light-color: #8f9bb3;
     .filter-options {
       margin-right: 10px;
       width: 80px;
-
-      ::ng-deep .mat-form-field-underline,
-      ::ng-deep .mat-form-field-ripple {
-        background-color: unset;
-      }
     }
 
     .search-input {
@@ -42,7 +37,7 @@ $experiment-state-light-color: #8f9bb3;
       margin-right: 20px;
     }
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   ::ng-deep .mat-form-field-suffix {
     top: 5px;
   }
