--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-post-condition/experiment-post-condition.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-post-condition/experiment-post-condition.component.html
@@ -1,7 +1,7 @@
 <div class="shared-modal--step-container">
   <section class="shared-modal--form-container">
     <form [formGroup]="postExperimentRuleForm" class="post-experiment-rule-form">
-      <mat-form-field class="ft-14-600">
+      <mat-form-field class="dense-2 ft-14-600">
         <mat-label>{{ 'home-global.post-experiment-rule.text' | translate }}</mat-label>
         <mat-select class="ft-14-400" formControlName="postExperimentRule">
           <mat-option *ngFor="let rule of postExperimentRules" [value]="rule.value">
@@ -10,7 +10,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field class="ft-14-600">
+      <mat-form-field class="dense-2 ft-14-600">
         <mat-label>{{ 'global.condition.text' | translate }}</mat-label>
         <mat-select class="ft-14-400" formControlName="revertTo">
           <mat-option *ngFor="let condition of experimentConditions" [value]="condition.id">
