--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.html
@@ -22,7 +22,7 @@
         >
           {{ 'home.new-experiment.schedule.start-on.text' | translate }}
         </mat-label>
-        <mat-form-field class="ft-14-700">
+        <mat-form-field class="dense-2 ft-14-700">
           <input
             matInput
             readonly
@@ -58,7 +58,7 @@
               {{ 'home.new-experiment.schedule.end-on.text' | translate }}
             </span>
           </mat-radio-button>
-          <mat-form-field class="ft-14-700">
+          <mat-form-field class="dense-2 ft-14-700">
             <input
               matInput
               readonly
@@ -84,7 +84,7 @@
             </span>
           </mat-radio-button>
           <div class="end-criteria" *ngIf="groupType">
-            <mat-form-field class="ft-12-700 group-type-control">
+            <mat-form-field class="dense-2 ft-12-700 group-type-control">
               <input
                 type="number"
                 matInput
@@ -108,7 +108,7 @@
             ></span>
           </div>
           <div class="end-criteria">
-            <mat-form-field class="ft-12-700">
+            <mat-form-field class="dense-2 ft-12-700">
               <input
                 type="number"
                 matInput
