--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -15,7 +15,7 @@
             {{ 'home.new-experiment.schedule.end-on.text' | translate }}
           </span>
         </mat-radio-button>
-        <mat-form-field class="ft-14-700">
+        <mat-form-field class="dense-2 ft-14-700">
           <input
             matInput
             readonly
@@ -37,7 +37,7 @@
           </span>
         </mat-radio-button>
         <div class="end-criteria" *ngIf="experiment.group">
-          <mat-form-field class="ft-14-700 group-type-control">
+          <mat-form-field class="dense-2 ft-14-700 group-type-control">
             <input
               type="number"
               matInput
@@ -61,7 +61,7 @@
           ></span>
         </div>
         <div class="end-criteria">
-          <mat-form-field class="ft-14-700">
+          <mat-form-field class="dense-2 ft-14-700">
             <input
               type="number"
               matInput
