--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.html
@@ -1,7 +1,7 @@
 <div class="experiment-rule">
   <span class="ft-24-700 title">{{ 'home.change-post-experiment-rule.title.text' | translate }}</span>
   <form [formGroup]="postExperimentRuleForm" class="experiment-rule-form">
-    <mat-form-field class="ft-16-400">
+    <mat-form-field class="dense-2 ft-16-400">
       <mat-label>{{ 'home-global.post-experiment-rule.text' | translate }}</mat-label>
       <mat-select class="ft-16-400" formControlName="postExperimentRule">
         <mat-option *ngFor="let rule of postExperimentRules" [value]="rule.value">
@@ -10,7 +10,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="ft-16-400">
+    <mat-form-field class="dense-2 ft-16-400">
       <mat-label>{{ 'global.condition.text' | translate }}</mat-label>
       <mat-select class="ft-16-400" formControlName="revertTo">
         <mat-option *ngFor="let condition of experimentConditions" [value]="condition.id">
