--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.html
@@ -2,7 +2,7 @@
   <p class="ft-16-600">
     {{ 'segments.duplicate-segment.heading.text' | translate: { segmentName: data.segment.name } }}
   </p>
-  <mat-form-field class="ft-14-600 name">
+  <mat-form-field class="dense-2 ft-14-600 name">
     <input
       matInput
       class="ft-14-400 name-input"
@@ -12,7 +12,7 @@
     />
   </mat-form-field>
   <br />
-  <mat-form-field class="ft-14-600 description">
+  <mat-form-field class="dense-2 ft-14-600 description">
     <input
       matInput
       class="ft-14-400 name-input"
