--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -110,6 +110,18 @@
   @include custom-components-theme($light-theme);
 }
 
+.dense-1 {
+  @include mat.all-component-densities(-1);
+}
+
+.dense-2 {
+  @include mat.all-component-densities(-2);
+}
+
+.mat-mdc-form-field {
+  margin-bottom: 10px;
+}
+
 // TODO material specific style which cannot be changed by scope
 .mat-drawer-inner-container {
   display: flex;
@@ -284,6 +296,12 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   }
 }
 
+
+.mdc-text-field.mdc-text-field--filled,
+.mat-mdc-option {
+  background-color: white !important;
+}
+
 .mat-mdc-radio-button {
   .mdc-radio {
     margin-left: -10px;
@@ -301,7 +319,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
 // Therefore we override the css. If option appears in future, these can go away.
 
 // Added to globally prevent truncation of content dropdowns
-.mat-select-panel-wrap .mat-select-panel {
+.mat-mdc-select-panel-wrap .mat-select-panel {
   max-width: fit-content;
 }
 
